# 2020-2021

./: .gitignore  LICENSE  README.md  pi_env.sh  run.sh  setup_sim.sh  surface_env.sh
MotorCode/: Actual.py  Control.py  CornerServo.py  executable.py  testServo.py
camera_stream/scripts/: cam_pub.py
coral-bleaching/: coral.py  coral_blue.py  coral_notebook.ipynb  funieGAN.py
coral-bleaching/utils/: data_utils.py
net-int/: installNode.sh  package-lock.json  test.txt
net-int/reactgui/: package-lock.json  package.json
net-int/reactgui/public/: index.html
net-int/reactgui/src/: index.css  index.js
net-int/server/: 2020_server.py  Move_Server.py  README.md  ROS_server_documentation.md  TestClient.py  documentation.md  image_client.py  image_server.py  main_server.py  movement_server.py  script_mgr_test_client.py  scripts_mgr.py  scripts_mgr_test_client.py  test.py  test_image_client.py  timer.py
net-int/server/test/: hello_world.py
net-int/wheelyboi-webapp/: package-lock.json  package.json
net-int/wheelyboi-webapp/public/: index.html
net-int/wheelyboi-webapp/src/: index.js
src/: CMakeLists.txt
src/camera_stream/: CMakeLists.txt  package.xml  setup.py
src/camera_stream/scripts/: cam_pub.py  compressed_pub.py  multi_stream.py  picam_pub.py  picam_stream.py  picam_sub.py  start_cameras.py  switchable_cams.py  switchcam_pub.py  test.py  test_multicam.py  usbcam_pub.py  video_stream.py  video_stream_full.py
src/camera_stream/src/MotorCode/: CornerServo.py  Executable.py  TestServo.py
src/camera_stream/src/MultiCam/: MultiCamDriver.py  MultiCamManager.py
src/nautilus_control/: CMakeLists.txt  package.xml
src/nautilus_control/config/: TAM.yaml  thruster_manager.yaml
src/nautilus_control/launch/: start_thruster_manager.launch
src/nautilus_control/scripts/: Move_Server.py  keyboard_controller.py
src/nautilus_description/: CMakeLists.txt  package.xml
src/nautilus_launch/: CMakeLists.txt  package.xml
src/nautilus_motors/: CMakeLists.txt  package.xml  setup.py
src/nautilus_motors/scripts/MotorCode/: keyboard_controller.py  motor_driver.py  pig.sh
src/nautilus_motors/src/MotorCode/: Control Copy 7-3-21.py  Control.py
src/nautilus_scripts/: CMakeLists.txt  package.xml  setup.py
src/nautilus_scripts/scripts/: coral_bleaching.py  key_pub.py  subway_car_runner.py
src/nautilus_scripts/scripts/coral_bleaching/: README.md  coral_bleaching.py  coral_bleaching_runner.py
src/nautilus_scripts/scripts/flyover_task/: flyover_task_runner.py
src/nautilus_scripts/scripts/subway_car/: README.md  subway_car_runner.py
src/nautilus_scripts/src/coral_bleaching/: coral.py  coral_bleaching.py  match_images.py
src/nautilus_scripts/src/flyover_task/: constants.py  identify_shapes.py  process_rows.py  render_graph.py  track_grid.py
src/nautilus_scripts/src/nautilus_utils/: CamHolder.py
src/nautilus_scripts/src/subway_car/: Photomosaic.py  subway_car.py
src/nautilus_worlds/: CMakeLists.txt  package.xml
src/nautilus_worlds/launch/: empty_underwater_world.launch  nautilus.launch  nautilus_sim.launch  spawn_nautilus_model.launch  subway.launch
src/nautilus_worlds/models/colony_dead_bleach/: model.sdf
src/nautilus_worlds/models/colony_dead_growth/: model.config  model.sdf
src/nautilus_worlds/models/colony_growth_2/: model.sdf
src/nautilus_worlds/models/colony_growth_2_recovery_2/: model.sdf
src/nautilus_worlds/models/colony_original/: model.config  model.sdf
src/nautilus_worlds/models/colony_original_wall/: model.sdf
src/nautilus_worlds/models/colony_spec/: model.config  model.sdf
src/nautilus_worlds/models/subway_car/: model.config  model.sdf
src/nautilus_worlds/models/subway_car/meshes/: subway_car.dae
src/nautilus_worlds/worlds/: empty_underwater.world
src/sensors/: Adafruit_BMP085.py  Adafruit_BMP085_3.py  Adafruit_I2C_3.py  distance.py  gyro_2.py  master.py  master_3.py  sensors_main.py
(+87 files in other folders)
